Api implementation (#7)
* feat: emoji translate

* test: add tests

* chore: go mod tidy

* chore: adjust openapi definition

* feat: /suggest api

* docs: add comments

* refactor: api/controller -> api

* style: gofmt
