# api/emoji.go
@@ -1,9 +1,10 @@
-package controller
+package api
 
 import (
 	"context"
 
 	oapigen "github.com/podhmo/emoji-api/api/oapigen"
+	"github.com/podhmo/emoji-api/emojilib"
 )
 
 type EmojiController struct{}
@@ -17,6 +18,25 @@ func NewEmojiController() *EmojiController {
 //
 // * body  :requestBody                         -- "need: var body oapigen.SuggestJSONBody; gctx.ShouldBindJSON(&body); "
 func (c *EmojiController) Suggest(ctx context.Context, request oapigen.SuggestRequestObject) (response oapigen.SuggestResponseObject, err error) {
+	prefix := request.Body.Prefix
+
+	option := emojilib.SuggestOption{}
+	if limit := request.Body.Limit; limit != nil {
+		option.Limit = *limit
+	}
+	if sort := request.Body.Sort; sort == oapigen.SuggestJSONBodySortDesc {
+		option.Reverse = true
+	}
+
+	suggestions := emojilib.Suggest(prefix, option)
+	got := make([]oapigen.EmojiDefinition, len(suggestions))
+	for i, x := range suggestions {
+		got[i] = oapigen.EmojiDefinition{
+			Alias: x.Alias,
+			Char:  x.Char,
+		}
+	}
+	response = oapigen.Suggest200JSONResponse(got)
 	return
 }
 
@@ -25,5 +45,9 @@ func (c *EmojiController) Suggest(ctx context.Context, request oapigen.SuggestRe
 //
 // * body  :requestBody                         -- "need: var body oapigen.TranslateJSONBody; gctx.ShouldBindJSON(&body); "
 func (c *EmojiController) Translate(ctx context.Context, request oapigen.TranslateRequestObject) (response oapigen.TranslateResponseObject, err error) {
+	text := request.Body.Text
+	translated := emojilib.Translate(text)
+
+	response = oapigen.Translate200JSONResponse(translated)
 	return
 }
